--- a/src/app/dashboard/components/product-management/get-product/get-product.component.html
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.html
@@ -95,7 +95,7 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr>
-          <th >{{'dGetProduct.id' | transloco}}</th>
+          <!-- <th >{{'dGetProduct.id' | transloco}}</th> -->
           <th >{{'dGetProduct.name' | transloco}}</th>
           <th >{{'dGetProduct.img' | transloco}}</th>
           <th >{{'dGetProduct.price' | transloco}}</th>
@@ -109,7 +109,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-product>
         <tr>
-          <td>{{ product.id }}</td>
+          <!-- <td>{{ product.id }}</td> -->
           <td>{{ product.name }}</td>
           <td>
             <img
