--- a/src/app/dashboard/components/product-management/product-management.component.scss
+++ b/src/app/dashboard/components/product-management/product-management.component.scss
@@ -1,7 +1,3 @@
-.container{
-  padding: 20px;
-}
-
 
 .product-body{
   display: flex;
@@ -16,7 +12,5 @@
 
 }
 .product-list{
-  position: relative;
-  left: auto;
-  width: auto;
+  width: 100%;
 }
