--- a/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="container w-full">
+<div class="container w-full h-full">
   <div class="column ">
     <a [routerLink]="['user-info']">
       <div>
