--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -1,25 +1,27 @@
-<form class="container" [formGroup]="newpassForm">
-  <div class="row">
-    <div class="header">
-      <p class="flex flex-wrap">
-        {{ "userpassForm.infoP" | transloco }}
-      </p>
-    </div>
-    <div class="flex">
-      <span class="p-float-label">
-        <i class="pi pi-lock" style="color: #000"></i>
-        <p-password
-          id="currentPassword"
-          formControlName="currentPassword"
-          styleClass="password"
-          [toggleMask]="true"
-          [feedback]="false"
-        />
-        <label htmlFor="currentPassword">{{
-          "userpassForm.currentPass" | transloco
-        }}</label>
-      </span>
-      <small
+<div class="box">
+ <div class="form">
+  <form class="container" [formGroup]="newpassForm">
+    <div class="row">
+      <div class="header">
+        <h2>
+          {{ "userpassForm.header" | transloco }}
+        </h2>
+      </div>
+      <div class="flex w-full">
+        <span class="p-float-label">
+          <i class="pi pi-lock" style="color: #000"></i>
+          <p-password
+            id="currentPassword"
+            formControlName="currentPassword"
+            styleClass="password"
+            [toggleMask]="true"
+            [feedback]="false"
+          />
+          <label htmlFor="currentPassword">{{
+            "userpassForm.currentPass" | transloco
+          }}</label>
+        </span>
+        <small
           *ngIf="
             newpassForm.get('password').value !=
             newpassForm.get('confirmpassword').value
@@ -33,46 +35,82 @@
               : ""
           }}
         </small>
+      </div>
+      <div class="flex w-full">
+        <span class="p-float-label">
+          <i class="pi pi-lock" style="color: #000"></i>
+          <p-password
+            id="password"
+            formControlName="password"
+            styleClass="password"
+            [toggleMask]="true"
+          >
+            <ng-template pTemplate="header">
+              <h6>{{ "userpassForm.selectpass" | transloco }}</h6>
+            </ng-template>
+            <ng-template pTemplate="footer">
+              <p-divider></p-divider>
+              <p class="mt-2">{{ "userpassForm.suggetions" | transloco }}</p>
+              <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                <li>{{ "userpassForm.lowercase" | transloco }}</li>
+                <li>{{ "userpassForm.uppercase" | transloco }}</li>
+                <li>{{ "userpassForm.numeric" | transloco }}</li>
+                <li>{{ "userpassForm.8character" | transloco }}</li>
+                <li>
+                  <p class="text-danger ml-0">
+                    {{ "userpassForm.warnP" | transloco }}
+                  </p>
+                </li>
+              </ul>
+            </ng-template>
+          </p-password>
+          <label htmlFor="password">{{
+            "userpassForm.newPass" | transloco
+          }}</label>
+        </span>
+      </div>
+      <div class="flex w-full">
+        <span class="p-float-label">
+          <i class="pi pi-lock" style="color: #000"></i>
+          <p-password
+            id="confirmpassword"
+            formControlName="confirmpassword"
+            styleClass="password"
+            [toggleMask]="true"
+          >
+            <ng-template pTemplate="header">
+              <h6>{{ "userpassForm.selectpass" | transloco }}</h6>
+            </ng-template>
+            <ng-template pTemplate="footer">
+              <p-divider></p-divider>
+              <p class="mt-2">{{ "userpassForm.suggestions" | transloco }}</p>
+              <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                <li>{{ "userpassForm.lowercase" | transloco }}</li>
+                <li>{{ "userpassForm.uppercase" | transloco }}</li>
+                <li>{{ "userpassForm.numeric" | transloco }}</li>
+                <li>{{ "userpassForm.8character" | transloco }}</li>
+                <li>
+                  <p class="text-danger ml-0">
+                    {{ "userpassForm.warnP" | transloco }}
+                  </p>
+                </li>
+              </ul>
+            </ng-template>
+          </p-password>
+          <label htmlFor="confirmpassword">{{
+            "userpassForm.newCPass" | transloco
+          }}</label>
+        </span>
+      </div>
+      <div class="flex w-full">
+        <span class="button-style">
+          <button pButton class="button">
+            {{ "userpassForm.buttonLabel" | transloco }}
+          </button>
+        </span>
+      </div>
     </div>
-    <div class="flex">
-      <span class="p-float-label">
-        <i class="pi pi-lock" style="color: #000"></i>
-        <p-password
-          id="password"
-          formControlName="password"
-          styleClass="password"
-          [toggleMask]="true"
-        />
-        <label htmlFor="password">{{
-          "userpassForm.newPass" | transloco
-        }}</label>
-      </span>
-    </div>
-    <div class="flex">
-      <span class="p-float-label">
-        <i class="pi pi-lock" style="color: #000"></i>
-        <p-password
-          id="confirmpassword"
-          formControlName="confirmpassword"
-          styleClass="password"
-          [toggleMask]="true"
-        />
-        <label htmlFor="confirmpassword">{{
-          "userpassForm.newCPass" | transloco
-        }}</label>
-      </span>
-    </div>
-    <div>
-      <p class="flex text-danger">
-        {{ "userpassForm.warnP" | transloco }}
-      </p>
-    </div>
-    <div class="flex">
-      <span class="button-style">
-        <button pButton class="button" >
-          {{ "userpassForm.buttonLabel" | transloco }}
-        </button>
-      </span>
-    </div>
-  </div>
-</form>
+  </form>
+ </div>
+
+</div>
