--- a/src/app/pages/components/account/account.component.scss
+++ b/src/app/pages/components/account/account.component.scss
@@ -15,6 +15,7 @@ $background-color: #ecf0f1;
 .container {
   padding: 1%;
   width: 100%;
+  height: 100%;
   align-items: center;
   background-color: #f6f6f6;
 }
@@ -24,15 +25,16 @@ $background-color: #ecf0f1;
   flex-direction: row;
   margin-top: 10px;
 
-  @media (min-width: $breakpoint-tablet) {
-    flex-direction: row;
+  @media (max-width: $breakpoint-tablet) {
+    flex-direction: column;
   }
 }
 
 .product-filter {
   max-width: 100%;
-  height: auto;
+  height: 100%;
   margin-bottom: 10px;
+
 
   @media (min-width: $breakpoint-tablet) {
     max-width: 250px;
@@ -43,10 +45,11 @@ $background-color: #ecf0f1;
 
 .product-list {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
+  margin-left: 15px;
 
   @media (min-width: $breakpoint-desktop) {
     width: calc(100% - 250px);
-    margin-left:50px;
+
   }
 }
