--- a/src/app/pages/components/account/userpassword/userpassword.component.scss
+++ b/src/app/pages/components/account/userpassword/userpassword.component.scss
@@ -5,18 +5,26 @@ $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
 
+.box{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
-  margin: 10px;
 
 
   .row {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: self-start;
+    width: 100%;
 
     .header {
       width: 70%;
@@ -85,9 +93,10 @@ $background-color: #ecf0f1;
       align-items: center;
       justify-content: center;
       margin-top: 10px;
+      width: 100%;
 
       button {
-        width: 11rem;
+        width: 100%;
         padding: 15px;
         background-color: #3498db;
         justify-content: center;
