--- a/src/app/pages/components/product/card-detail/card-detail.component.html
+++ b/src/app/pages/components/product/card-detail/card-detail.component.html
@@ -1,38 +1,39 @@
 <div class="surface-section px-6 py-6 border-1 surface-border border-round">
-  <div class="flex flex-row justify-content-center align-content-center">
-      <div class="flex">
-          <img
-            [src]="getFileUrl(product?.file)"
-            class="border-2 border-transparent border-round image"
-          />
-      </div>
+  <div class="flex flex-row justify-content-start align-content-start">
+    <div class="flex ">
+      <img
+        [src]="getFileUrl(product?.file)"
+        class="border-2 border-transparent border-round image"
+      />
+    </div>
     <div class="col-12 lg:col-4 py-3 lg:pl-6">
       <div class="flex align-items-center text-xl font-medium text-900 mb-4">
         {{ product?.name }}
       </div>
-      <div class="flex align-items-center justify-content-between mb-5">
-        <span class="text-900 font-medium text-3xl block"
-          >${{ product?.priceStacked }}</span
-        >
-        <div class="flex align-items-center">
-          <span class="mr-2">
+      <hr />
+      <div class="flex flex-column align-items-start mb-5">
+        <span class="text-900 font-bold text-3xl block">{{
+          product?.priceStacked | currency : "USD"
+        }}</span>
+        <div class="flex align-items-s mt-3">
+          <span class="mr-2 align-items-center">
+            <span class="mr-2" style="font-size: 1.3rem; font-weight: bold">{{
+              product?.valueRating | number : "1.1-2"
+            }}</span>
             <p-rating
-            [ngModel]="product?.valueRating"
-            [readonly]="true"
-            [cancel]="false"
-            starStyleClass="custom-star"
-          ></p-rating>
+              [ngModel]="product?.valueRating"
+              [readonly]="true"
+              [cancel]="false"
+              starStyleClass="custom-star"
+            ></p-rating>
           </span>
-          <span class="text-sm"
-            ><b class="text-900 mr-1">24</b>
-            <span class="text-500"></span>reviews</span
-          >
         </div>
       </div>
-      <div class="font-bold text-900 mb-3">{{'cardDetail.quantity' | transloco}} {{product?.quantity}} </div>
-      <div
-        class="flex flex-column"
-      >
+      <hr />
+      <div class="font-bold text-900 mb-3">
+        {{ "cardDetail.quantity" | transloco }} {{ product?.quantity }}
+      </div>
+      <div class="flex flex-column">
         <div class="flex w-full mb-2">
           <p-inputNumber
             [(ngModel)]="defaultValue"
@@ -50,48 +51,50 @@
             (ngModelChange)="updateProductPrice()"
           ></p-inputNumber>
         </div>
-        <div class="flex flex-row w-full align-items-center  mt-4">
-         <div class="out-button">
-          <button
-          pButton
-          pRipple
-          class="add-to-cart"
-          *ngIf="isOutOfStock(product)"
-          [class.disabled]="isOutOfStock(product)"
-          [ngClass]="{ 'no-hover': isOutOfStock(product) }"
-          [disabled]="isOutOfStock(product)"
-        >
-          {{'cardForm.notStock' | transloco}}
-        </button>
-        <button
-        pButton
-        pRipple
-          class="add-to-cart"
-          *ngIf="!isOutOfStock(product)"
-          (click)="addToCart(product , product.id)"
-        >
-          {{ "cardForm.buttonLabel" | transloco }}
-        </button>
-      </div>
-        <div>
-          <i
-          class="pi text-2xl cursor-pointer"
-          [ngClass]="{
-            'pi-heart text-600': !liked,
-            'pi-heart-fill text-red-500': liked
-          }"
-          (click)="liked = !liked; addToCartFavorites()"
-        ></i>
-        </div>
+        <div class="flex flex-row w-full align-items-center mt-4">
+          <div class="out-button">
+            <button
+              pButton
+              pRipple
+              class="add-to-cart"
+              *ngIf="isOutOfStock(product)"
+              [class.disabled]="isOutOfStock(product)"
+              [ngClass]="{ 'no-hover': isOutOfStock(product) }"
+              [disabled]="isOutOfStock(product)"
+            >
+              {{ "cardForm.notStock" | transloco }}
+            </button>
+            <button
+              pButton
+              pRipple
+              class="add-to-cart"
+              *ngIf="!isOutOfStock(product)"
+              (click)="addToCart(product, product.id)"
+            >
+              {{ "cardForm.buttonLabel" | transloco }}
+            </button>
+          </div>
+          <div>
+            <i
+              class="pi text-3xl ml-1 cursor-pointer"
+              [ngClass]="{
+                'pi-heart text-600': !liked,
+                'pi-heart-fill text-red-500': liked
+              }"
+              (click)="liked = !liked; addToCartFavorites()"
+            ></i>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <p-tabView>
-    <p-tabPanel header="{{'cardDetail.header' | transloco}}">
-      <div class="text-900 font-bold text-3xl mb-4 mt-2">{{'cardDetail.title' | transloco}}</div>
+    <p-tabPanel header="{{ 'cardDetail.header' | transloco }}">
+      <div class="text-900 font-bold text-3xl mb-4 mt-2">
+        {{ "cardDetail.title" | transloco }}
+      </div>
       <p class="line-height-3 text-600 p-0 mx-0 mt-0 mb-4">
-        {{product?.name}}, {{product?.description}}
+        {{ product?.name }}, {{ product?.description }}
       </p>
     </p-tabPanel>
   </p-tabView>
