--- a/src/app/pages/components/product/card-detail/card-detail.component.scss
+++ b/src/app/pages/components/product/card-detail/card-detail.component.scss
@@ -5,6 +5,7 @@ $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
 
+
 .image{
   max-width: 500px;
   max-height: 400px;
@@ -34,7 +35,7 @@ $background-color: #ecf0f1;
 
       &:focus {
         outline: none;
-        border-bottom: 2px solid $dark-text;
+        border-bottom: 1px solid $dark-text;
       }
      }
 
@@ -55,6 +56,7 @@ $background-color: #ecf0f1;
     background-color:$dark-text ;
     border: none;
     width: 100%;
+    height: 45px;
     justify-content: center;
   }
 }
